[package]
name = "interledger-relay"
version = "0.1.0"
authors = ["dj <dj@coil.com>"]
description = "Interledger connector relay"
edition = "2018"
publish = false

[dependencies]
bytes = { version = "0.4.11", features = ["serde"] }
env_logger = "0.6.1"
futures = "0.1.25"
http = "0.1.15"
hyper = "0.12.25"
hyper-tls = "0.3.2"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.1.15"

[dependencies.ilp]
package = "interledger-packet"
features = ["serde"]
git = "https://github.com/coilhq/interledger-rs"
branch = "dj-connector-relay3"
#path = "../../../ilp-rs/crates/interledger-packet"

[dev-dependencies]
lazy_static = "1.2"
