[package]
name = "interledger-relay"
version = "0.2.0"
authors = ["dj <dj@coil.com>"]
description = "Interledger connector relay"
edition = "2018"
publish = false

[dependencies]
base64 = "0.12.0"
bytes = { version = "0.5.4", features = ["serde"] }
env_logger = "0.7.1"
futures = "0.3.4"
http = "0.2.1"
hyper = "0.13.4"
hyper-tls = "0.4.1"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2.15", features = ["rt-threaded"] }

[dependencies.ilp]
package = "interledger-packet"
features = ["serde"]
path = "../interledger-packet"

[dev-dependencies]
lazy_static = "1.4"
