[package]
name = "interledger-relay"
version = "0.4.0"
authors = ["dj <dj@coil.com>"]
description = "Interledger connector relay"
edition = "2018"
publish = false

[dependencies]
base64 = "0.12.0"
bytes = { version = "0.5.4", features = ["serde"] }
chrono = "0.4.11"
env_logger = "0.7.1"
futures = "0.3.4"
http = "0.2.1"
hyper = "0.13.4"
hyper-tls = "0.4.1"
log = "0.4"
percent-encoding = "2.1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "0.2.15", features = ["rt-threaded"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
yup-oauth2 = "4.1.2"

[dependencies.ilp]
package = "interledger-packet"
features = ["serde"]
path = "../interledger-packet"

[dev-dependencies]
lazy_static = "1.4"
